# crypto-feeds

./: .gitignore  Cargo.toml  PYTHON_API.md  README.md  README_PYTHON.md  build.rs  example.py  example_usage.py  example_with_logging.py  pyproject.toml  requirements.txt  simple_demo.py  test_feeds.py  test_registry.py  verify_install.py
configs/: beacon.json  beacon.yaml  binance.yaml  capture.yaml  capture_big4.yaml  capture_hibachi.yaml  capture_rise.yaml  capture_w_fairprice.yaml  config.yaml  fair_price_demo.yaml  fp_calibrated.json  lead_lag.yaml  lead_lag_study.yaml  micro_price.yaml  symbols.yaml
crates/nado-ws/: Cargo.toml
crates/nado-ws/src/: lib.rs
docs/: README.md  fair_price_calibration.md  fair_price_validation.md
llm_tasks/: 01_ring_buffers_and_snaps.md  02_analytics_interface.md
proto/: MexcWrapper.proto
scripts/: fp_calibrate.py  fp_study.py  fp_validate.py  min_latency.py  syn_ack.py
src/: analytics.rs  app_config.rs  bar_manager.rs  display.rs  exchange_fees.rs  fair_price.rs  feed_display.rs  fp_display.rs  historical_bars.rs  lib.rs  market_data.rs  orderbook.rs  python.rs  ring_buffer.rs  snapshot.rs  symbol_registry.rs  trade_data.rs  vol_engine.rs  vol_params.rs  vol_provider.rs  volume_fetcher.rs
src/exchanges/: apex.rs  binance.rs  bingx.rs  bybit.rs  coinbase.rs  connection.rs  extended.rs  hibachi.rs  hotstuff.rs  hyperliquid.rs  kraken.rs  kucoin.rs  lighter.rs  mexc.rs  mod.rs  nado.rs  okx.rs  risex.rs  zeroone.rs
src/hft/: alloc_guard.rs  binance.rs  bulk.rs  engine.rs  hibachi.rs  hyperliquid.rs  mod.rs  multi_conn.rs  risex.rs  ws_framer.rs  zeroone.rs
src/mappers/: apex.rs  binance.rs  bingx.rs  bybit.rs  coinbase.rs  extended.rs  hibachi.rs  hotstuff.rs  hyperliquid.rs  kraken.rs  kucoin.rs  lighter.rs  mexc.rs  mod.rs  nado.rs  okx.rs  symbol_mapper.rs  zeroone.rs
src/onchain/: aerodrome.rs  listener.rs  mod.rs  uniswap.rs
tests/: hft_zero_alloc.rs
