[package]
name = "crypto-feeds"
version = "0.1.0"
edition = "2024"

[lib]
name = "crypto_feeds"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
csv = "1.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
once_cell = "1.21.3"
ordered-float = "5.1.0"
prost = "0.13"
prost-types = "0.13"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

[build-dependencies]
prost-build = "0.13"
